--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
           <div class="row">
             <div class="col">
                 <div class="about-info">
-                    <!-- <h3>My introduction</h3> -->
                     <p>Meet Pranay, a passionate computer enthusiast with a diverse skill set and a knack for innovation. As an accomplished app developer, Pranay crafts intuitive and dynamic applications, pushing the boundaries of user experience. Beyond coding, Pranay delves into the realm of cybersecurity, specializing in penetration testing to fortify digital defenses. With a penchant for challenges, Pranay thrives in Capture The Flag (CTF) competitions, leveraging problem-solving prowess to conquer complex scenarios. An avid Linux enthusiast, Pranay transforms operating systems into personalized masterpieces through meticulous ricing, while also embracing the principles of DevOps to streamline development pipelines. With a blend of creativity and technical acumen, Pranay is poised to revolutionize the digital landscape.
                     </p>
                 </div>
@@ -151,22 +150,18 @@
         </div>
         <div class="project-container">
             <div class="project-box">
-                <!-- <i class="uil uil-briefcase-alt"></i> -->
                 <h3>AI Assistant App using Flutter</h3>
                 <label>An AI-powered assistant application built using Flutter. It utilizes the OpenAI API key to generate images and text-based responses, providing users with personalized assistance.</label>
             </div>
             <div class="project-box">
-                <!-- <i class="uil uil-users-alt"></i> -->
                 <h3>Custom Arch Linux Rice</h3>
                 <label>A customized Arch Linux desktop environment featuring Hyprland as the desktop environment, Kitty as the terminal emulator, Rofi as the application manager,Waybar as the status bar.</label>
             </div>
             <div class="project-box">
-                <!-- <i class="uil uil-award"></i> -->
                 <h3>Profile Card App</h3>
                 <label>A simple profile card application designed to display user information in an elegant and user-friendly format.</label>
             </div>
             <div class="project-box">
-                <!-- <i class="uil uil-award"></i> -->
                 <h3>Netflix Clone</h3>
                 <label>A clone of the popular streaming platform Netflix, designed to mimic its interface and functionality. Allows users to browse movies and TV shows, view details, and more.</label>
             </div>
@@ -224,11 +219,11 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-dribbble"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
-        </div>
+                <div class="icon"><a href="https://www.instagram.com/Horaunt"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/pranay-pandey-419754181/"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://twitter.com/horaunt"><i class="uil uil-twitter"></i></a></div>
+                <div class="icon"><a href="https://www.github.com/horaunt"><i class="uil uil-github-alt"></i></a></div>
+            </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Pranay Pandey</a> - All rights reserved</p>
         </div>
