--- a/index.html
+++ b/index.html
@@ -146,12 +146,15 @@
        </section>
        <section class="section" id="projects">
         <div class="top-header">
+            
             <h1>Projects</h1>
         </div>
         <div class="project-container">
+            
             <div class="project-box">
-                <h3>AI Assistant App using Flutter</h3>
+                <h3><a class="link" href="https://www.google.com">AI Assistant App using Flutter</a></h3>
                 <label>An AI-powered assistant application built using Flutter. It utilizes the OpenAI API key to generate images and text-based responses, providing users with personalized assistance.</label>
+                </a>
             </div>
             <div class="project-box">
                 <h3>Custom Arch Linux Rice</h3>
